<resources>
    <string name="app_name">Lateral Flow Device Analysis</string>
    <string name="cam_button">CAMERA</string>
    <string name="process_button">NEXT</string>
    <string name="covid19_label">COVID-19 Test</string>
    <string name="testID_label">Device ID</string>
    <string name="result_label">Result</string>
    <string name="time_label">Time</string>
    <string name="empty_text">      </string>
    <string name="share_button">SHARE</string>
    <string name="upload_button">UPLOAD</string>

    <string name="prepare_test_device_title">Prepare device</string>
    <string name="prepare_test_device_message">
        <br>-Open the test strip and place it on a horizontal surface \n</br>
        <br>-Place the extraction tube somewhere upright \n</br>
        <br>-Place 6 drops of extraction fluid into extraction tube</br>
    </string>
    <string name="take_sample_title">Take your sample</string>
    <string name="take_sample_message">
        <br>- Open and take the swab without touching its cloth end \n</br>
        <br>- Insert about 1.5 cm of the swab gently into one nostril \n</br>
        <br>- Roll swab 10 times slowly along inside of the nostril \n</br>
        <br>- Repeat insertion and roll into the other nostril</br>
    </string>
    <string name="process_swab_title">Process the swab</string>
    <string name="process_swab_message">
        <br>- Put the fabric end of the swab into the extraction tube \n</br>
        <br>- Press swab head against the edge of tube with force \n</br>
        <br>- Rotate swab around the tube for 10 seconds \n</br>
        <br>- Remove swab while squeezing tube and fabric end \n</br>
        <br>- Close and turn the tube upside down</br>
    </string>
    <string name="user_test_device_title">Use the test device</string>
    <string name="user_test_device_message">
        <br>- Squeeze 2 drops onto specimen well marked with S \n</br>
        <br>- Press NEXT below and follow instructions</br>
    </string>
    <string name="next_button">NEXT</string>

    <string name="stop_watch_message">Press START to initiate the stopwatch and NEXT when the alarm goes off</string>
    <string name="start_button">START</string>
    <string name="stop_watch_content">00:00:00</string>

    <string name="registration_title">Consent Request</string>
    <string name="user_consent_title">We need your consent to:</string>
    <string name="user_consent_message">
        <BR>- Collect your name and email address \n</BR>
        <BR>- Access the device photo camera \n</BR>
        <BR>- Collect photos taken by this app \n</BR>
        <BR>- Use the internet connection of this device \n</BR>
        <BR>- Collect metrics generated by this app \n</BR>
        <BR>- More information at <a href="https://www.digitalshoestring.net/">digitalshoestring.net</a> </BR>
    </string>
    <string name="consent_button">Consent</string>
    <string name="options_list">How was your test today?</string>
    <string name="opt_negative_wos">Negative without symptoms.</string>
    <string name="opt_positive">Positive.</string>
    <string name="opt_negative_ws">Negative but I have symptoms.</string>
    <string name="opt_void">I had a void test.</string>
    <string name="submit_options">SUBMIT</string>
</resources>