<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Options">

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="47dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto"
        android:text="@string/options_list"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/lft_options"
        android:layout_width="399dp"
        android:layout_height="310dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/negative_wos"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:checked="false"
            android:fontFamily="@font/roboto"
            android:text="@string/opt_negative_wos"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="195dp" />

        <RadioButton
            android:checked="false"
            android:id="@+id/positive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/opt_positive"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RadioButton
            android:checked="false"
            android:id="@+id/negative_ws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/opt_negative_ws"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RadioButton
            android:checked="false"
            android:id="@+id/voids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/opt_void"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/submit_options"
        android:visibility="invisible"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>